# ServerMilk

./: .eslintrc.json  .gitignore  .gitmodules  .prettierrc  CHANGELOG.md  README.md  README.zh-CN.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: prepare.mjs
src/: App.tsx  App.vue  command.ts  global.css  main.ts  main.tsx  port-form.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  config.rs  constant.rs  dashboard.rs  hacker.rs  logs.rs  main.rs  runner.rs  server.rs  shortcut.rs  state.rs  tray.rs  user_handler.rs  utils.rs  window_manager.rs
src-tauri/src/command/: auto_start.rs  dashboard.rs  dialog.rs  exit.rs  launch.rs  log.rs  mod.rs  port.rs  sidecar.rs  state.rs  status.rs  token.rs
src-tauri/src/dto/: mod.rs  user_settings.rs
src-tauri/src/ext/: window.rs
src/hooks/: useCommander.ts  usePreference.ts  useSettings.ts  useUpdater.ts
src/pages/: settings.vue
src/panel/: auto-start.tsx  dashboard.tsx  logs.tsx  page.tsx  port-form.tsx  port.tsx  status.tsx  token-form.tsx  token.tsx
src/utils/: util.ts
