[package]
name = "serverbee"
version = "1.0.0"
description = "A desktop program for iOS application named ServerBee"
authors = ["ZingerLittleBee"]
license = ""
repository = "https://github.com/ZingerLittleBee/serverbee-desktop"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "process-command-api", "system-tray", "updater"] }
auto-launch = "0.4.0"
open = "3.0.3"

actix = "0.13"
actix-codec = "0.5"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4.1"
awc = "3"
bytestring = "1.1.0"
log = "0.4"
log4rs = "1.2.0"
futures-util = { version = "0.3.17", default-features = false, features = ["std", "sink"] }
tokio = { version = "1.13.1", features = ["full"] }
tokio-stream = "0.1.8"
sysinfo = "0.26.1"
serde_yaml = "0.9.4"
anyhow = "1.0"
port-selector = "0.1.6"
reqwest = { version = "0.11", features = ["json"] }
dunce = "1.0.3"

[target.'cfg(not(windows))'.dependencies]
systemstat = "0.2.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
