[package]
name = "server_milk"
version = "1.2.5"
description = "A desktop program for iOS application named ServerBee"
authors = ["ZingerLittleBee"]
license = ""
repository = "https://github.com/ZingerLittleBee/ServerMilk"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "process-command-api", "system-tray", "updater"] }
auto-launch = "0.4.0"
open = "3.0.3"
anyhow = "1.0"
port-selector = "0.1.6"
reqwest = { version = "0.11", features = ["json"] }
dunce = "1.0.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
