[package]
name = "server_milk"
version = "2.0.1"
description = "A desktop program for iOS application named ServerBee"
authors = ["ZingerLittleBee"]
license = ""
repository = "https://github.com/ZingerLittleBee/ServerMilk"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = [ "api-all", "process-command-api", "system-tray", "updater", "devtools"] }
open = "5.0.0"
anyhow = "1.0"
port-selector = "0.1.6"
reqwest = { version = "0.11", features = ["json"] }
dunce = "1.0.3"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-shadows = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
